crypto-plugin: minor improvements on doc and CMake

--- a/src/plugins/crypto/CMakeLists.txt
+++ b/src/plugins/crypto/CMakeLists.txt
@@ -1,8 +1,5 @@
 include (LibAddPlugin)
 
-set (ELEKTRA_CRYPTO_API_GCRYPT FALSE)
-set (ELEKTRA_CRYPTO_API_OPENSSL FALSE)
-
 #
 # base plugin (that does actually nothing on its own)
 #
@@ -31,25 +28,24 @@ foreach (plugin ${PLUGINS})
 		include (FindPkgConfig)
 		pkg_search_module (OPENSSL openssl)
 		if (NOT OPENSSL_FOUND)
-			message ( FATAL_ERROR "OpenSSL development files not found")
-			return ()
+			remove_plugin ( ${plugin} "OpenSSL development files not found")
+		else  (NOT OPENSSL_FOUND)
+			add_plugin (${plugin}
+				SOURCES
+					openssl_operations.h
+					openssl_operations.c
+					crypto.h
+					crypto.c
+				INCLUDE_DIRECTORIES
+					${OPENSSL_INCLUDE_DIR}
+				LINK_LIBRARIES
+					${OPENSSL_LIBRARIES}
+				COMPILE_DEFINITIONS
+					ELEKTRA_PLUGIN_NAME=\"${plugin}\"
+					ELEKTRA_VARIANT=openssl
+					ELEKTRA_CRYPTO_API_OPENSSL
+			)
 		endif (NOT OPENSSL_FOUND)
-
-		add_plugin (${plugin}
-			SOURCES
-				openssl_operations.h
-				openssl_operations.c
-				crypto.h
-				crypto.c
-			INCLUDE_DIRECTORIES
-				${OPENSSL_INCLUDE_DIR}
-			LINK_LIBRARIES
-				${OPENSSL_LIBRARIES}
-			COMPILE_DEFINITIONS
-				ELEKTRA_PLUGIN_NAME=\"${plugin}\"
-				ELEKTRA_VARIANT=openssl
-				ELEKTRA_CRYPTO_API_OPENSSL
-		)
 
 	endif (${plugin} MATCHES "crypto_openssl")
 
@@ -58,25 +54,24 @@ foreach (plugin ${PLUGINS})
 
 		find_package (LibGcrypt)
 		if (NOT LIBGCRYPT_FOUND)
-			message ( FATAL_ERROR "libgcrypt development files not found")
-			return ()
+			remove_plugin ( ${plugin} "libgcrypt development files not found")
+		else (NOT LIBGCRYPT_FOUND)
+			add_plugin (${plugin}
+				SOURCES
+					gcrypt_operations.h
+					gcrypt_operations.c
+					crypto.h
+					crypto.c
+				INCLUDE_DIRECTORIES
+					${LIBGCRYPT_INCLUDE_DIR}
+				LINK_LIBRARIES
+					${LIBGCRYPT_LIBRARIES}
+				COMPILE_DEFINITIONS
+					ELEKTRA_PLUGIN_NAME=\"${plugin}\"
+					ELEKTRA_VARIANT=gcrypt
+					ELEKTRA_CRYPTO_API_GCRYPT
+			)
 		endif (NOT LIBGCRYPT_FOUND)
-
-		add_plugin (${plugin}
-			SOURCES
-				gcrypt_operations.h
-				gcrypt_operations.c
-				crypto.h
-				crypto.c
-			INCLUDE_DIRECTORIES
-				${LIBGCRYPT_INCLUDE_DIR}
-			LINK_LIBRARIES
-				${LIBGCRYPT_LIBRARIES}
-			COMPILE_DEFINITIONS
-				ELEKTRA_PLUGIN_NAME=\"${plugin}\"
-				ELEKTRA_VARIANT=gcrypt
-				ELEKTRA_CRYPTO_API_GCRYPT
-		)
 
 	endif (${plugin} MATCHES "crypto_gcrypt")
 
