update in CONTRACT
use relative path
add proposal for plugin-specific configs

--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -1,4 +1,4 @@
-[system/elektra/modules]
+[]
 type = null
 status = implemented
 version = 1.0.0
@@ -14,21 +14,19 @@ description = This part of the hierarchy specifies the semantics of a
   name). They might, however, someday conflict with the specification
   here. So prefer to prefix plugin specific clauses.
 
+  The presence of the parent key indicates that the module exists.
 
-[system/elektra/modules/_]
+[exports]
 type = null
 status = implemented
-description = Indicates that the module exists.
-
-[system/elektra/modules/_/exports]
-type = null
-status = implemented
+usedby = plugin
 description = Indicate that symbols are exported.
 
 
-[system/elektra/modules/_/exports/_]
+[exports/_]
 type = func
 status = implemented
+usedby = plugin
 description = Allows a plugin to export any functions.
   Typical names are get, set, error, open or close.
   
@@ -45,28 +43,32 @@ description = Allows a plugin to export any functions.
   The usage of such functions will couple plugins or applications
   tightly, so avoid them if possible.
 
-[system/elektra/modules/_/constants]
+[constants]
 type = null
 status = implemented
+usedby = plugin
 description = Indicate that constants are available.
 
-[system/elektra/modules/_/constants/_]
+[constants/_]
 type = string
 status = implemented
+usedby = plugin
 description = Exports constants that might be interesting for users,
   applications or other plugins.
   All plugin specific compilation information (e.g. verbosity, pathes)
   should be exported as constants.
 
-[system/elektra/modules/_/infos]
+[infos]
 type = string
 status = implemented
+usedby = plugin
 description = Indicate that info is available.
   These clauses are required so that plugins can be mounted.
 
-[system/elektra/modules/_/infos/author]
+[infos/author]
 type = string
 status = implemented
+usedby = plugin spec
 description = The name and e-mail address of the author of the plugin.
   It blames the person responsible for the plugin.
   The plugin must behave as described in the contract.
@@ -75,10 +77,11 @@ description = The name and e-mail address of the author of the plugin.
   If you want, you can get an @libelektra.org e-mail address.
 
 
-[system/elektra/modules/_/infos/licence]
+[infos/licence]
 type = string
 status = implemented
 example = BSD
+usedby = plugin spec
 description = The licence relevant for the user of the plugin.
   For plugins published with Elektra it is "BSD".
   Note that it might be illegal to use some combinations of licences,
@@ -97,9 +100,10 @@ description = The licence relevant for the user of the plugin.
   licence of the installation concerned may change.
   The warning might be wrong, if the licence actually is compatible.
 
-[system/elektra/modules/_/infos/description]
+[infos/description]
 type = string
 status = implemented
+usedby = plugin spec
 description = The full text describing everything relevant for the
   users, developers or maintainers of this plugin.
   Do not duplicate information from other clauses.
@@ -124,7 +128,7 @@ description = The full text describing everything relevant for the
   - relevant Links for further Information
 
 
-[system/elektra/modules/_/infos/provides]
+[infos/provides]
 type = enum
   resolver
   storage
@@ -135,6 +139,7 @@ type = enum
   check
   logging
 status = implemented
+usedby = plugin
 description = Introduces a more abstract name (=provider) for the type
   of problem the plugin solves.
   
@@ -151,7 +156,7 @@ description = Introduces a more abstract name (=provider) for the type
   highly recommended to avoid name conflicts with future providers added
   here.
 
-[system/elektra/modules/_/infos/placements]
+[infos/placements]
 type = enum
   prerollback
   rollback
@@ -167,6 +172,7 @@ type = enum
   commit
   postcommit
 status = implemented
+usedby = plugin
 description = gives a list of places in which the plugin must appear.
   During mounting, the algorithm checks if a free slot is available in
   the requested position. Because of this clause the placement works
@@ -174,16 +180,17 @@ description = gives a list of places in which the plugin must appear.
   
   The type enumerates the only supported placements.
   
-  The places are referred to with the names given in
-  [elektra-ordering(7)](/doc/help/elektra-ordering.md).
+  The places are referred to with the names given
+  in [elektra-ordering(7)](/doc/help/elektra-ordering.md).
   During mounting, the algorithm checks if
   a free slot is available in the requested position.  Because of this
   clause the placement works automatically.
 
 
-[system/elektra/modules/_/infos/ordering]
+[infos/ordering]
 type = string
 status = implemented
+usedby = plugin
 description = requests that a list of plugins or provided names is not
   present at the time of insertion. If such a plugin is already there,
   the order constraint is violated. Note, that the relation to the
@@ -193,9 +200,10 @@ description = requests that a list of plugins or provided names is not
   So it is a simple way to ensure that your plugin will be added before
   the one given with this contract clause.
 
-[system/elektra/modules/_/infos/stacking]
+[infos/stacking]
 type = string
 status = implemented
+usedby = plugin
 description = any non-empty string disables the stacking of plugins.
   By default, plugins in
   postgetstorage are ordered in reverse order than in presetstorage.
@@ -203,9 +211,10 @@ description = any non-empty string disables the stacking of plugins.
   would automatically be available when only one array of plugins is
   processed bidirectionally.
 
-[system/elektra/modules/_/infos/needs]
+[infos/needs]
 type = string
 status = implemented
+usedby = plugin spec
 description = Lists the requirements of the plugin.
   This can be a name of a plugin, but you should always prefer
   the name of providers.
@@ -220,15 +229,17 @@ description = Lists the requirements of the plugin.
   that such a provider must be present anywhere in the backend.  The name
   can also directly refer to another plugin's name.
 
-[system/elektra/modules/_/infos/recommends]
+[infos/recommends]
 type = string
 status = implemented
+usedby = plugin spec
 description = Recommendations are similar to needs, but the backend
   also validates if they are not included.
 
-[system/elektra/modules/_/infos/version]
+[infos/version]
 type = string
 status = implemented
+usedby = plugin spec
 example = 1
 description = Exports the plugin version this plugin was compiled
   against. Use the macro PLUGINVERSION in kdbplugin.h for its value.
@@ -236,13 +247,31 @@ description = Exports the plugin version this plugin was compiled
   
   The version implies how the plugin interface must look like.
 
-[system/elektra/modules/_/config/needs]
+[config/needs]
 type = null
 status = implemented
+usedby = plugin spec
 description = Indicates that this plugin exports a configuration it
   needs. All keys below will be propagated to the backend configuration.
-  One of the provider should provide this configuration.
+  Some of the provider in infos/needs should use this configuration.
 
   It presents the plugin configuration needed so that
   the plugin works properly. Typically the configuration is not for the
   plugin itself, but for other needed plugins (in infos/needs)
+
+[config/plugin/_]
+type = null
+status = proposed
+usedby = plugin spec
+description = Indicates that this plugin needs one of the plugins
+  in info/needs (as given in _) to have the configuration given below.
+
+  All keys below will be propagated to the plugin configuration.
+
+  The configuration is not for the
+  plugin itself, but for the specified needed plugin (in infos/needs)
+
+  For example, infos/needs is code null
+  then you can pass configuration to code only (and not to null or
+  the plugin itself!) by:
+  config/plugin/code/escape
