CONTRACT: add infos/metadata

--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -156,6 +156,7 @@ description = Introduces a more abstract name (=provider) for the type
   highly recommended to avoid name conflicts with future providers added
   here.
 
+
 [infos/placements]
 type = enum
   prerollback
@@ -212,9 +213,10 @@ description = any non-empty string disables the stacking of plugins.
   processed bidirectionally.
 
 [infos/needs]
-type = string
+type = list <string>
 status = implemented
 usedby = plugin spec
+example = null code
 description = Lists the requirements of the plugin.
   This can be a name of a plugin, but you should always prefer
   the name of providers.
@@ -275,3 +277,24 @@ description = Indicates that this plugin needs one of the plugins
   then you can pass configuration to code only (and not to null or
   the plugin itself!) by:
   config/plugin/code/escape
+
+[infos/metadata]
+type = list <string>
+status = proposed
+usedby = spec
+example = check/validation check/validation/message
+description = lists meta data the plugin will take care of.
+  (implements the semantics for)
+  
+  Which meta data exists is defined in doc/METADATA.ini
+  and spec/elektra/metadata.
+  
+  Note that if you need other plugins to work properly
+  (e.g. that consume meta data that your plugin writes or
+   that create the meta data that your plugin consumes)
+  use infos/needs instead!
+
+  Note that this is also documentation for the supported
+  meta data. The meta data itself, however should be
+  described in doc/METADATA.ini.
+
