define BUILTIN_PLUGIN_FOLDER

--- a/src/include/CMakeLists.txt
+++ b/src/include/CMakeLists.txt
@@ -27,6 +27,8 @@ set (BUILTIN_EXEC_FOLDER
 	"${CMAKE_INSTALL_PREFIX}/${TARGET_TOOL_EXEC_FOLDER}")
 set (BUILTIN_DATA_FOLDER
 	"${CMAKE_INSTALL_PREFIX}/${TARGET_TEST_DATA_FOLDER}")
+set (BUILTIN_PLUGIN_FOLDER
+	"${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/${TARGET_PLUGIN_FOLDER}")
 set (ELEKTRA_DEPRECATED "__attribute__ ((deprecated))")
 set (ELEKTRA_UNUSED "__attribute__ ((unused))")
 
