correctly find all plugins
using glob(3) we search for all shared libraries

--- a/src/libs/tools/src/CMakeLists.txt
+++ b/src/libs/tools/src/CMakeLists.txt
@@ -13,6 +13,11 @@ set (__symbols_file ${CMAKE_CURRENT_SOURCE_DIR}/libelektratools-symbols.map)
 if (BUILD_SHARED)
 	add_library (elektratools SHARED ${SOURCES})
 
+	set_property(TARGET elektratools
+		APPEND PROPERTY COMPILE_DEFINITIONS
+		"ELEKTRA_SHARED"
+		)
+
 	target_link_libraries (elektratools elektra elektra-plugin)
 
 	if (${LD_ACCEPTS_VERSION_SCRIPT})
