doc: hints and status proposals
move metadata toplevel
(similar to config+more extensible)

--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -238,6 +238,41 @@ usedby = plugin spec
 description = Recommendations are similar to needs, but the backend
   also validates if they are not included.
 
+[infos/hints]
+type = string
+status = proposed
+usedby = plugin spec
+description = Hints give concrete providers for infos/needs and
+  infos/recommends.
+  
+  For example, if infos/needs of any plugin contains code and infos/hints
+  contains hexcode, the code-plugin will be resolved to hexcode.
+  
+  Should be sorted by relevance, the first existing hint will be used.
+
+
+[infos/status]
+type = vector enum
+  popular
+  productive
+  specific
+  unittest
+  tested
+  preview
+  memleak
+  experimental
+  unfinished
+  concept
+status = proposed
+usedby = plugin spec
+description = Status how well-established a plugin is.
+  
+  Different status can be combined.
+  
+  specific mean that the plugin is non-portable in order
+  to gain some specific advantages for the user.
+
+
 [infos/version]
 type = string
 status = implemented
@@ -278,12 +313,12 @@ description = Indicates that this plugin needs one of the plugins
   the plugin itself!) by:
   config/plugin/code/escape
 
-[infos/metadata]
-type = list <string>
+[metadata/needs]
+type = null
 status = proposed
 usedby = spec
 example = check/validation check/validation/message
-description = lists meta data the plugin will take care of.
+description = the keys below list meta data the plugin will take care of.
   (implements the semantics for)
   
   Which meta data exists is defined in doc/METADATA.ini
