--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -179,7 +179,10 @@ status= proposed
 description= indicate that the mountpoint needs some
   configuration for plugins in order to work.
   
-  See CONTRACT.ini for individual infos (usedby is tagged with spec).
+  See CONTRACT.ini for details.
+
+
+
 
 
 #
