doc: move info/metadata

--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -238,6 +238,26 @@ usedby = plugin spec
 description = Recommendations are similar to needs, but the backend
   also validates if they are not included.
 
+[info/metadata]
+type = null
+status = proposed
+usedby = spec
+example = check/validation check/validation/message
+description = a space separated list of meta-names a plugin will take care of.
+  (implements the semantics for)
+  
+  Which meta data exists is defined in doc/METADATA.ini
+  and spec/elektra/metadata.
+  
+  Note that if you need other plugins to work properly
+  (e.g. that consume meta data that your plugin writes or
+   that create the meta data that your plugin consumes)
+  use infos/needs and infos/ordering instead!
+
+  Note that this is also documentation for the supported
+  meta data. The meta data itself, however should be
+  described in doc/METADATA.ini.
+
 [infos/hints]
 type = string
 status = proposed
@@ -312,24 +332,4 @@ description = Indicates that this plugin needs one of the plugins
   then you can pass configuration to code only (and not to null or
   the plugin itself!) by:
   config/plugin/code/escape
-
-[metadata/needs]
-type = null
-status = proposed
-usedby = spec
-example = check/validation check/validation/message
-description = the keys below list meta data the plugin will take care of.
-  (implements the semantics for)
-  
-  Which meta data exists is defined in doc/METADATA.ini
-  and spec/elektra/metadata.
-  
-  Note that if you need other plugins to work properly
-  (e.g. that consume meta data that your plugin writes or
-   that create the meta data that your plugin consumes)
-  use infos/needs instead!
-
-  Note that this is also documentation for the supported
-  meta data. The meta data itself, however should be
-  described in doc/METADATA.ini.
 
