implement logic to prefer better plugins
reuse code in MockPluginDatabase
(to test as much as possible from ModulesPluginDatabase)
add tests for preference logic via status

--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -272,17 +272,18 @@ description = Hints give concrete providers for infos/needs and
 
 
 [infos/status]
-type = vector enum
-  popular
-  productive
-  specific
-  unittest
-  tested
-  preview
-  memleak
-  experimental
-  unfinished
-  concept
+type = vector <int or enum>
+  popular 4000
+  productive 2000
+  specific 1000
+  unittest 500
+  tested 250
+  preview -50
+  memleak -250
+  experimental -500
+  unfinished -1000
+  concept -2000
+  discouraged -4000
 status = proposed
 usedby = plugin spec
 description = Status how well-established a plugin is.
