--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -218,6 +218,19 @@ usedby/tool= gen
 
 
 
+
+
+
+
+
+
+#
+# Implementations via plugins
+#
+
+
+
+
 #
 # Information about the key's name
 #
@@ -327,6 +340,7 @@ usedby/plugin= conditionals
 type= string
 description= A ternary conditional style operator to define 
 	relations between keys
+
 #
 # Other information about keys
 #
