avoid manipulation of add_gtest target
Reason: add_gtest might do nothing (when tests are disabled)
flag for label kdbtests
remove unnecessary CMAKE_THREAD_LIBS_INIT
fix some whitespace issues
for #258 (compile with and without -DBUILD_TESTING)

--- a/src/libs/getenv/tests/CMakeLists.txt
+++ b/src/libs/getenv/tests/CMakeLists.txt
@@ -7,6 +7,5 @@ include (LibAddTest)
 file (GLOB TESTS test_*.cpp)
 foreach (file ${TESTS})
 	get_filename_component (name ${file} NAME_WE)
-	add_gtest (${name})
-	target_link_libraries(${name} elektragetenv)
+	add_gtest (${name} TARGET_LINK_LIBRARIES elektragetenv)
 endforeach (file ${TESTS})
