--- a/src/libs/tools/tests/CMakeLists.txt
+++ b/src/libs/tools/tests/CMakeLists.txt
@@ -1,14 +1,13 @@
-include(LibAddMacros)
+include (LibAddMacros)
 
 add_headers (HDR_FILES)
 add_cppheaders (HDR_FILES)
-add_toolheaders(HDR_FILES)
+add_toolheaders (HDR_FILES)
 
 include (LibAddTest)
 
 file (GLOB TESTS testtool_*.cpp)
 foreach (file ${TESTS})
 	get_filename_component (name ${file} NAME_WE)
-	add_gtest (${name})
-	target_link_elektratools(${name})
+	add_gtest (${name} LINK_TOOLS)
 endforeach (file ${TESTS})
