--- a/tests/kdb/CMakeLists.txt
+++ b/tests/kdb/CMakeLists.txt
@@ -8,8 +8,6 @@ add_toolheaders(HDR_FILES)
 include (LibAddTest)
 foreach (file ${TESTS})
 	get_filename_component (name ${file} NAME_WE)
-	add_gtest (${name})
-	set_property(TEST ${name} PROPERTY LABELS kdbtests)
-	target_link_libraries(${name} ${CMAKE_THREAD_LIBS_INIT})
+	add_gtest (${name} KDBTESTS LINK_TOOLS)
 endforeach (file ${TESTS})
 
