proposal for spec plugin metadata

--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -269,7 +269,37 @@ description= stores the original name of the key as it was before the
 
 
 #
-# Information about the key's value
+# Spec Plugin
+#
+
+[conflict/_]
+type = string
+status = proposed
+description = reports which meta data had a conflict because another
+  meta data was already present before.
+
+#
+# Struct validation
+#
+
+[array]
+type = range
+status = proposed
+description = checks if the subkeys form a valid array and are not smaller/larger
+  than as given.
+example = 4-20
+
+[struct]
+type = vector <string>
+status = proposed
+description = checks if the subkeys form a valid struct with the given
+  names.
+  The validator makes sure that there are no keys for the struct missing.
+example = device mpoint type options [dumpfreq] [passno]
+
+
+#
+# Validation/Checks about the key's value
 #
 
 
