crypto-plugin: start rewrite of testmod_crypto - use plugin config for key derivation - adapt to compile variants

--- a/src/plugins/crypto/CMakeLists.txt
+++ b/src/plugins/crypto/CMakeLists.txt
@@ -15,7 +15,7 @@ add_plugin (crypto
 		ELEKTRA_PLUGIN_NAME=\"crypto\"
 )
 
-#add_plugintest (crypto)
+add_plugintest (crypto)
 
 #
 # Compile Variants
