prepare addPlugin changes
move parse arguments
add "exists" lookup
more info in CONTRACT.ini, remove "hints" idea
(better to have some concept of registering plugins that provide something)

--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -233,7 +233,7 @@ description = Lists the requirements of the plugin.
 
 [infos/recommends]
 type = string
-status = implemented
+status = proposal
 usedby = plugin spec
 description = Recommendations are similar to needs, but the backend
   also validates if they are not included.
@@ -258,17 +258,15 @@ description = a space separated list of meta-names a plugin will take care of.
   meta data. The meta data itself, however should be
   described in doc/METADATA.ini.
 
-[infos/hints]
+[infos/plugins]
 type = string
-status = proposed
+status = implemented
 usedby = plugin spec
-description = Hints give concrete providers for infos/needs and
-  infos/recommends.
+description = Load plugins as given (with arguments as in "kdb mount").
   
-  For example, if infos/needs of any plugin contains code and infos/hints
-  contains hexcode, the code-plugin will be resolved to hexcode.
-  
-  Should be sorted by relevance, the first existing hint will be used.
+  Note that, if plugin is already loaded somewhere else, the plugin
+  will load twice. So you should prefer providers and needs
+  to declare dependencies.
 
 
 [infos/status]
@@ -312,12 +310,34 @@ usedby = plugin spec
 description = Indicates that this plugin exports a configuration it
   needs. All keys below will be propagated to the backend configuration.
   Some of the provider in infos/needs should use this configuration.
-
+  
   It presents the plugin configuration needed so that
   the plugin works properly. Typically the configuration is not for the
   plugin itself, but for other needed plugins (in infos/needs)
 
-[config/plugin/_]
+[config/metadata/_]
+type = null
+status = proposed
+usedby = plugin spec
+description = Indicates that this plugin needs the plugin
+  that provides given metadata to have the configuration given
+  below the respective key.
+  
+  The configuration is not for the
+  plugin itself, but for the plugin that provides the specified metadata.
+  
+  For example:
+  
+  config/metadata/python#transform is transform/python
+  config/metadata/python#transform/script is transform.py
+  
+  then the metadata transform/python (when needed) will be
+  associated with python#transform and its configuration:
+  
+  script is transform.py
+
+
+[config/provides/_]
 type = null
 status = proposed
 usedby = plugin spec
