rename to elektra-export-errors for #434

--- a/src/error/CMakeLists.txt
+++ b/src/error/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_executable(exporterrors exporterrors.cpp parser.hpp parser.cpp)
+add_executable(elektra-export-errors exporterrors.cpp parser.hpp parser.cpp)
 
-set_source_files_properties(exporterrors OBJECT_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/specification)
+set_source_files_properties(elektra-export-errors OBJECT_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/specification)
 
 add_executable(exporttranslations exporttranslations.cpp parser.hpp parser.cpp)
 
