--- a/src/libs/tools/CMakeLists.txt
+++ b/src/libs/tools/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory (include)
 add_subdirectory (src)
 add_subdirectory (examples)
+add_subdirectory (benchmarks)
 
 if (ENABLE_TESTING)
 	if (BUILD_FULL OR BUILD_STATIC)
