metadata: some ideas

--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -236,10 +236,10 @@ usedby/tool= gen
 #
 
 [rename/toupper]
-type= string
-status= implemented
-usedby/plugin= rename
-description=rename key name to uppercase
+type = string
+status = implemented
+usedby/plugin = rename
+description = rename key name to uppercase
 
 [rename/tolower]
 type= string
@@ -277,10 +277,7 @@ type = string
 status = proposed
 description = reports which meta data had a conflict because another
   meta data was already present before.
-
-#
-# Struct validation
-#
+  Idea: use only one log, also for conflicts.
 
 [array]
 type = range
@@ -288,6 +285,33 @@ status = proposed
 description = checks if the subkeys form a valid array and are not smaller/larger
   than as given.
 example = 4-20
+
+[required]
+type = range
+status= proposal
+description = for _ as basename as array. Otherwise the presence determines
+  if a key is required.
+
+#
+# Per-Key Log
+#
+
+[logs/_/_]
+status = proposal
+description = logs + pluginname + criticality
+
+
+[warnings]
+status = implemented
+
+[error]
+status = implemented
+
+
+#
+# Struct validation
+#
+
 
 [struct]
 type = vector <string>
