spec: conflict meta + demo shellscript

--- a/src/plugins/spec/CMakeLists.txt
+++ b/src/plugins/spec/CMakeLists.txt
@@ -4,6 +4,8 @@ add_plugin (spec
 	SOURCES
 		spec.h
 		spec.c
+        metafunctions.c
+        metafunctions.h
     LINK_LIBRARIES
         elektra-ease
     )
