--- a/src/plugins/spec/test/spec.ini
+++ b/src/plugins/spec/test/spec.ini
@@ -1,6 +1,7 @@
 [testkey/test/#]
     array = 1-3
     arrayMeta = array
+    conflict/set/member = ERROR
 [testkey/test/a/_]
     wildcardMeta = wildcard
     wildcardMeta2 = wildcard2
