SPEC: added require option

--- a/src/plugins/spec/test/spec.ini
+++ b/src/plugins/spec/test/spec.ini
@@ -2,6 +2,8 @@
     array = 1-3
     arrayMeta = array
     conflict/get/member = INFO
+[testkey/test/#/a]
+    require =
 [testkey/test/a/_]
     wildcardMeta = wildcard
     wildcardMeta2 = wildcard2
