--- a/src/plugins/spec/test/spectest.ini
+++ b/src/plugins/spec/test/spectest.ini
@@ -1,9 +1,12 @@
 test = bla
 test/#0 = 0
+test/#0/a = a
 test/#1 = 1
+test/#1/a = a
 test/#2 = 2
 test/#3 = 3
 test/#4 = 4
+test/#4/a = a
 test/#asdf = asdf
 test/#asdf/bla = asdfbla
 test/a = a
