--- a/src/plugins/spec/test/spec.ini
+++ b/src/plugins/spec/test/spec.ini
@@ -1,7 +1,7 @@
 [testkey/test/#]
     array = 1-3
     arrayMeta = array
-    conflict/get/member = INFO
+    conflict/get/member = WARNING
 [testkey/test/#/a]
     require =
 [testkey/test/a/_]
