build: now always install build tools
use -DINSTALL_BUILD_TOOLS=ON to install them
see #434

--- a/src/error/CMakeLists.txt
+++ b/src/error/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_executable(elektra-export-errors exporterrors.cpp parser.hpp parser.cpp)
 
-install (TARGETS elektra-export-errors DESTINATION bin)
+if (INSTALL_BUILD_TOOLS)
+	install (TARGETS elektra-export-errors DESTINATION bin)
+endif (INSTALL_BUILD_TOOLS)
 
 set_source_files_properties(elektra-export-errors OBJECT_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/specification)
 
