doc: fix expectations of "plugins" contract

--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -265,8 +265,11 @@ usedby = plugin spec
 description = Load plugins as given (with arguments as in "kdb mount").
   
   Note that, if plugin is already loaded somewhere else, the plugin
-  will load twice. So you should prefer providers and needs
-  to declare dependencies.
+  will load twice. Additionally, they will not be loaded recursively,
+  but only by those plugins that were given explictitely.
+  So you should prefer providers and needs to declare dependencies.
+  
+  It is only useful as an "alias" for a group of plugins.
 
 
 [infos/status]
