--- a/tests/shell/include_common.sh.in
+++ b/tests/shell/include_common.sh.in
@@ -207,6 +207,7 @@ is_not_rw_storage()
 	-o "x$PLUGIN" = "xconstants" \
 	-o "x$PLUGIN" = "xaugeas" \
 	-o "x$PLUGIN" = "xcsvstorage" \
+	-o "x$PLUGIN" = "xdpkg" \
 	-o "x$PLUGIN" = "xregexstore" 
 }
 
