--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -273,26 +273,45 @@ description = Load plugins as given (with arguments as in "kdb mount").
 
 
 [infos/status]
-type = vector <int or enum>
-  popular 4000
-  productive 2000
-  specific 1000
-  unittest 500
-  tested 250
-  preview -50
-  memleak -250
-  experimental -500
-  unfinished -1000
-  concept -2000
-  discouraged -4000
+type = vector<int enum>
+  {"recommended",  32000}, ; in case of doubt, use this plugin
+  {"productive",    8000}, ; actively used in productive environments, not only by maintainer
+  {"maintained",    4000}, ; actively used and fixed by maintainer (infos/author)
+  {"reviewed",      4000}, ; actively reviewed on every change and not by maintainer
+  {"conformant",    2000}, ; to indicate that e.g. a storage plugin fulfils all requirements of a storage plugin
+  {"compatible",    2000}, ; to indicate it will be compatible with its later versions
+  {"coverage",      2000}, ; unittests have full code coverage
+  {"specific",      1000}, ; means that the plugin is non-portable in order to gain some specific advantages for the user
+                           ; (i.e. in a positive sense specific/non-portable)
+  {"unittest",      1000}, ; substantial plugin unittests (testmod)
+  {"shelltest",     1000}, ; substantial unittests with shell
+  {"tested",         500}, ; extensively manually tested on every change
+  {"nodep",          250}, ; no external dependency, except the languages core deps, e.g. libstdc++
+  {"libc",           250}, ; uses libc only, no deps of other language's runtimes, e.g., libstdc++
+  {"configurable",    50}, ; options available to modify behaviour
+  {"final",           50}, ; no further extensions, configure options or features are desirable
+  {"preview",        -50}, ; plugin in technical preview state
+  {"memleak",       -250}, ; memleak in plugin or one of the libraries the plugin uses
+  {"experimental",  -500}, ; not much tested, plugin is in early stage
+  {"difficult",     -500}, ; the plugin is (unnecessarily) difficult to use
+  {"unfinished",   -1000}, ; important functionality still missing
+  {"old",          -1000}, ; code base is old and should be refactored/improved
+  {"nodoc",        -1000}, ; documentation is minimal
+  {"concept",      -2000}, ; the plugin only exists to demonstrate something
+  {"orphan",       -4000}, ; author does not respond and also otherwise not much knowledge about plugin is present
+  {"obsolete",     -4000}, ; another plugin fulfils a similar functionality in a better way
+  {"discouraged", -32000}, ; only use the plugin if you really know what you are doing
 status = proposed
 usedby = plugin spec
-description = Status how well-established a plugin is.
+description = Tags about how well-established and well-working a plugin is.
   
   Different status can be combined.
+  Numerical values are allowed, too.
   
-  specific mean that the plugin is non-portable in order
-  to gain some specific advantages for the user.
+  When changing some value in the type, you need to copy the information to
+  src/libs/tools/src/plugindatabase.cpp
+  src/plugins/template/README.md
+
 
 
 [infos/version]
