add status to all plugins
see #416

--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -306,7 +306,9 @@ usedby = plugin spec
 description = Tags about how well-established and well-working a plugin is.
   
   Different status can be combined.
-  Numerical values are allowed, too.
+  
+  Numerical values are allowed, too. Please argue in the infos/description why
+  numerical values are used.
   
   When changing some value in the type, you need to copy the information to
   src/libs/tools/src/plugindatabase.cpp
