--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -94,7 +94,7 @@ if (DOXYGEN_FOUND)
 			DEPENDS ${OUTPUT_DIRECTORY}/latex/refman.pdf
 		)
 
-		# needed because some .tex files are written after refman.tex (#470):
+		# fix for issue #470
 		add_custom_target (.NOTPARALLEL pdf)
 
 	endif (WITH_LATEX)
