--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -274,6 +274,7 @@ description = Load plugins as given (with arguments as in "kdb mount").
 
 [infos/status]
 type = vector<int enum>
+  {"default",      64000}, ; will be added by the build system for KDB_DEFAULT_STORAGE and KDB_DEFAULT_RESOLVER
   {"recommended",  32000}, ; in case of doubt, use this plugin
   {"productive",    8000}, ; actively used in productive environments, not only by maintainer
   {"maintained",    4000}, ; actively used and fixed by maintainer (infos/author)
@@ -290,6 +291,7 @@ type = vector<int enum>
   {"libc",           250}, ; uses libc only, no deps of other language's runtimes, e.g., libstdc++
   {"configurable",    50}, ; options available to modify behaviour
   {"final",           50}, ; no further extensions, configure options or features are desirable
+  {"global",           1}, ; suitable as global plugin
   {"preview",        -50}, ; plugin in technical preview state
   {"memleak",       -250}, ; memleak in plugin or one of the libraries the plugin uses
   {"experimental",  -500}, ; not much tested, plugin is in early stage
