improve build file gen. for crypto-plugin on OS X
fixes #487

--- a/src/plugins/crypto/CMakeLists.txt
+++ b/src/plugins/crypto/CMakeLists.txt
@@ -30,21 +30,34 @@ foreach (plugin ${PLUGINS})
 		if (NOT OPENSSL_FOUND)
 			remove_plugin ( ${plugin} "OpenSSL development files not found")
 		else  (NOT OPENSSL_FOUND)
-			add_plugin (${plugin}
-				SOURCES
-					openssl_operations.h
-					openssl_operations.c
-					crypto.h
-					crypto.c
-				INCLUDE_DIRECTORIES
-					${OPENSSL_INCLUDE_DIR}
-				LINK_LIBRARIES
-					${OPENSSL_LIBRARIES}
-				COMPILE_DEFINITIONS
-					ELEKTRA_PLUGIN_NAME=\"${plugin}\"
-					ELEKTRA_VARIANT=openssl
-					ELEKTRA_CRYPTO_API_OPENSSL
+
+			try_compile (HAS_OPENSSL_4SURE
+				"${CMAKE_BINARY_DIR}"
+				"${PROJECT_SOURCE_DIR}/src/plugins/crypto/compile_openssl.c"
+				CMAKE_FLAGS
+					-DINCLUDE_DIRECTORIES:STRING=${OPENSSL_INCLUDE_DIR}
+					-DLINK_LIBRARIES:PATH=${OPENSSL_LIBRARIES}
 			)
+
+			if (HAS_OPENSSL_4SURE)
+				add_plugin (${plugin}
+					SOURCES
+						openssl_operations.h
+						openssl_operations.c
+						crypto.h
+						crypto.c
+					INCLUDE_DIRECTORIES
+						${OPENSSL_INCLUDE_DIR}
+					LINK_LIBRARIES
+						${OPENSSL_LIBRARIES}
+					COMPILE_DEFINITIONS
+						ELEKTRA_PLUGIN_NAME=\"${plugin}\"
+						ELEKTRA_VARIANT=openssl
+						ELEKTRA_CRYPTO_API_OPENSSL
+				)
+			else ()
+				remove_plugin ( ${plugin} "OpenSSL development files not found")
+			endif (HAS_OPENSSL_4SURE)
 		endif (NOT OPENSSL_FOUND)
 
 	endif (${plugin} MATCHES "crypto_openssl")
@@ -56,21 +69,34 @@ foreach (plugin ${PLUGINS})
 		if (NOT LIBGCRYPT_FOUND)
 			remove_plugin ( ${plugin} "libgcrypt development files not found")
 		else (NOT LIBGCRYPT_FOUND)
-			add_plugin (${plugin}
-				SOURCES
-					gcrypt_operations.h
-					gcrypt_operations.c
-					crypto.h
-					crypto.c
-				INCLUDE_DIRECTORIES
-					${LIBGCRYPT_INCLUDE_DIR}
-				LINK_LIBRARIES
-					${LIBGCRYPT_LIBRARIES}
-				COMPILE_DEFINITIONS
-					ELEKTRA_PLUGIN_NAME=\"${plugin}\"
-					ELEKTRA_VARIANT=gcrypt
-					ELEKTRA_CRYPTO_API_GCRYPT
+
+			try_compile (HAS_GCRYPT_4SURE
+				"${CMAKE_BINARY_DIR}"
+				"${PROJECT_SOURCE_DIR}/src/plugins/crypto/compile_gcrypt.c"
+				CMAKE_FLAGS
+					-DINCLUDE_DIRECTORIES:STRING=${LIBGCRYPT_INCLUDE_DIR}
+					-DLINK_LIBRARIES:PATH=${LIBGCRYPT_LIBRARIES}
 			)
+
+			if (HAS_GCRYPT_4SURE)
+				add_plugin (${plugin}
+					SOURCES
+						gcrypt_operations.h
+						gcrypt_operations.c
+						crypto.h
+						crypto.c
+					INCLUDE_DIRECTORIES
+						${LIBGCRYPT_INCLUDE_DIR}
+					LINK_LIBRARIES
+						${LIBGCRYPT_LIBRARIES}
+					COMPILE_DEFINITIONS
+						ELEKTRA_PLUGIN_NAME=\"${plugin}\"
+						ELEKTRA_VARIANT=gcrypt
+						ELEKTRA_CRYPTO_API_GCRYPT
+				)
+			else ()
+				remove_plugin ( ${plugin} "libgcrypt development files not found")
+			endif (HAS_GCRYPT_4SURE)
 		endif (NOT LIBGCRYPT_FOUND)
 
 	endif (${plugin} MATCHES "crypto_gcrypt")
